refactor: clean lại source code, xóa phần code dư thừa